--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.16",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
